styles.css
*, :before, :after {
    box-sizing: border-box;
    
}

:root {
    --max-width-large-window: 50em;
    --gap-small: .5em;
    --gap-normal: 1em;
    --gap-large: 2em;
    --font-family-heading: 'Nunito', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    --font-family-body:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    --padding-btn-xlarge: 1.25em;
    --padding-btn-large: 1em;
    --padding-btn-normal: .75em;
    --padding-btn-small: .5em;
    --padding-btn-xsmall: .25em;
    --btn-bg-1: #3330;
    --btn-bg-2: #3332;
    --btn-bg-3: #3334;
    --btn-bg-4: #3336;
    --btn-bg-5: #3338;
    --btn-bg-6: #333a;
    --font-color: #41414f;
    --font-color-light: #5f5f6f;
    --font-color-lighter: #727272;
    --font-color-lightest: #9f9f9f;
    --font-color-semitransparent: #41414faa;
    --font-color-selected: #0046D3;
    --container-width: 90%;
    --burger-menu-minwidth: 10em;
    --transition-delay: 200ms;
    --carousel-img-height: 10em;
    scroll-behavior: smooth;
}

body {
    margin: 0;
    font-family: var(--font-family-body);
    line-height: 1.3;
    color: var(--font-color);
    overflow: visible;
    background-color: #fff0;

}

ul {
    padding: 0;
    margin: 0;
    list-style: none;
}

button {
    appearance: none;
    border: 0;
    font-size: inherit;
}

svg {
    fill: var(--font-color-light);
}

p {
    margin: 0;
}

a {
    text-decoration: none;
    font-family: var(--font-family-heading);
    
    color: inherit;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: var(--font-family-heading);
    color: var(--font-color);
    margin: 0;
}

h1 {
    font-size: 2em;
}

h2 {
    font-size: 1.5em;
}

h3 {
    font-size: 1.25em;
}

.large-heading {
    font-size: clamp(2em, 10vw ,3em);
}

.small-heading {
    font-size: 1.1em;
}

.smaller-heading {
    font-size: 1em;
}

.text-large {
    font-size: 1.125em;
}

.text-small {
    font-size: .875em;
}

.container {
    width: var(--container-width);
    max-width: 100em;
    margin: 0 auto;
}


.skip-content {
    text-decoration: none;
    height: 1px;
    width: 1px;
    position: absolute;
    overflow: hidden;
}

main {
    background-color: #9990;
    width: 100%;
}

/* "Navigate to top" button */

.navigate-top-btn-mobile {
    position: fixed;
    right: 3em;
    bottom: 3em;
    z-index: 2;
    background-color: var(--font-color-lightest);
    transition: all var(--transition-delay) linear;

    opacity: .5;

    display: flex;
    align-items: center;
    justify-content: center;
}

.arrow-up {
    height: 18px;
    width: 18px;
    fill: #fff;
}

.navigate-top-btn-mobile:hover {
    opacity: 1;
}

/* Modal box */

.modal-overlay {
    z-index: 3;
    inset: 0;
    position: fixed;
    background-color: #3333;
    overflow: auto;
    opacity: 0;  

    transition: all .2s ease-in;
}

.modal-box {
    border-radius: 1em;
    max-width: var(--max-width-large-window);
    width: 80%;
    min-width: 15em;
    min-height: 16em;
    background-color: #fff;
    margin: 4em auto 0 auto;
    padding: 1.5em;

    transform: translateY(10px);
    transition: all .2s ease-in;
}

.modal-header {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: var(--gap-normal);
}

.modal-header h2 {
    flex: 1 0 0;
}

.modal-content {
    margin-top: 2em;
    display: grid;
    gap: var(--gap-normal);
    grid-template-columns: repeat(auto-fill, minmax(12em, 1fr));
}

.hide-overflow {
    overflow: hidden;
}

.modal-item {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: .5em;
    padding-block: var(--padding-btn-small);
    cursor: pointer;
}

.modal-item img {
    clip-path: circle(12px);
}

.modal-item span {
    max-width: calc(100% - 2 * var(--padding-btn-large));
    margin: 0;
    overflow: hidden;
    text-overflow: ellipsis;
}

/* Controls */

.btn {
    /*height: unset;*/
    cursor: pointer;
    color: inherit;
    appearance: none;
    border: none;
    padding: 0;

    font-weight: bold;
    font-family: var(--font-family-heading);
}

.btn-padded {
    padding: var(--padding-btn-large)
}

.btn-padded-larger {
    padding: var(--padding-btn-xlarge);
}

.btn-rounded {
    border-radius: .5em;
}

.btn-round {
    border-radius: 50%;
}

.btn-transparent {
    transition: background-color 200ms;
    background-color: var(--btn-bg-1);
}

.btn-transparent:hover {
    background-color: var(--btn-bg-2);
}

.btn-transparent:active {
    background-color: var(--btn-bg-3);
}

.btn-filled {
    transition: transform 200ms;
    transition: color 200ms;
    background-color: #fff;
}

.btn-filled:hover {
    color: var(--font-color-semitransparent);
}

.btn-filled:active {
   transform: translate(1px, 1px);
}

.close-modal-btn {
    flex: 0;
    padding-block: var(--padding-btn-xsmall);
}

/* Navbar */

.navbar {
    position: absolute; 
    top: 0;
    width: 100%;
    z-index: 1;
}


#navbar-inner {
    display: flex;
    gap: var(--gap-small);
    flex-direction: row;
    align-items: stretch;
    /*position: relative;*/ /*don't know why this was here*/
}

.navbar-links-container {
    display: flex;
    gap: var(--gap-small);
    flex-direction: row;
    align-items: stretch;
    order: 1;
}

.navbar-links {
    display: flex;
    align-items: stretch;
    justify-content: center;
    flex-direction: row;
    gap: var(--gap-normal);
    

    text-decoration: none;
    list-style: none;
    padding: 0;
    margin: 0;
}

.navbar-links li {
    flex: 1;
    display: flex;
    align-items: center;
}

.navbar-links a {
    padding: var(--padding-btn-large);
    border-radius: .5em;
    flex: 1;
    color: #fff;

    white-space: nowrap;
    background-color: var(--btn-bg-1);

    /*font-family: var(--font-family-heading);*/
    font-weight: bold;
}

.navbar a:hover {
    background-color: var(--btn-bg-2);
}

.navbar a:active {
    background-color: var(--btn-bg-3);
}

.navbar-logo {
    flex: 1;
    padding: 1.5em 0;
    order: 0;
}
/* ... */

